# memorypal-v3-

./: .gitignore  README.md  codemagic.yaml  pubspec.yaml  setup_whisper.ps1
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/cpp/whisper/: whisper_jni.cpp
docs/: SECOND_BRAIN_ARCHITECTURE.md  WHISPER_ANDROID_INTEGRATION_SUMMARY.md  WHISPER_INTEGRATION_GUIDE.md  WHISPER_INTEGRATION_STATUS.md  WHISPER_SETUP_SCRIPT.md  whisper_integration_plan.md
lib/: main.dart
lib/models/: note.dart  recording.dart  user_profile.dart
lib/screens/: chat_screen.dart  developer_screen.dart  home_screen.dart  imported_file_list_screen.dart  note_detail_screen.dart  note_list_screen.dart  onboarding_screen.dart  profile_edit_screen.dart  profile_screen.dart  recording_detail_screen.dart  recording_list_screen.dart  save_memory_screen.dart  search_screen.dart  settings_screen.dart  text_note_editor_screen.dart  todo_list_screen.dart
lib/services/: agent_service.dart  ai_service_manager.dart  backup_service.dart  call_state_service.dart  data_export_service.dart  database_extension.dart  database_service.dart  deepseek_service.dart  developer_service.dart  emotion_analysis_service.dart  file_import_service.dart  item_tracking_service.dart  keyword_extraction_service.dart  kimi_service.dart  location_service.dart  model_download_service.dart  need_prediction_engine.dart  note_service.dart  notification_router.dart  notification_service.dart  proactive_dialogue_engine.dart  profile_evolution_engine.dart  recording_service.dart  scheduler_service.dart  second_brain_orchestrator.dart  settings_service.dart  share_receiver_service.dart  siliconflow_service.dart  smart_reminder_engine.dart  system_recording_importer.dart  transcription_service.dart  transcription_status_service.dart  vector_search_service.dart  wechat_import_service.dart  whisper_local_service.dart  whisper_platform_channel.dart  whisper_service.dart
lib/utils/: permission_manager.dart
lib/widgets/: ai_insight_card.dart  data_export_section.dart  model_download_dialog.dart
test/: widget_test.dart
(+7 files in other folders)
